test/libhyperion/syntaxTests/denominations/gplanck_as_identifier.hyp
contract C {
	uint constant gplanck = 1;
}
// ----
// ParserError 2314: (28-35): Expected identifier but got 'gplanck'
